--- a/screendoor.v.1.html
+++ b/screendoor.v.1.html
@@ -23,7 +23,7 @@
       100% { background-position: 100% 50%; }
     }
 #full {
-  width: 600px;
+  width: 500px;
   margin: 0 auto;
 }
     #highscore {
@@ -124,7 +124,8 @@
   <div id="scorebox">점수: <span id="score">0</span></div>
   <h1 style="display: inline-block; background: rgba(255,255,255,0.8); border-radius: 10px;">출입문게임</h1>
   <p style="display: inline-block; background: rgba(255,255,255,0.8); font-size: 16px; color: #333; margin: 5px 0 15px; border-radius: 5px;">
-    방향키 또는 버튼으로 사람들이 올바른 출입문으로 이동할 수 있게 도와주세요!
+    방향키 또는 버튼으로 사람들을 올바른 출입문으로 보내주세요!
+</p>
   <div>
     <label for="gender">캐릭터 선택:</label>
     <select id="gender">
