--- a/screendoor.v.1.html
+++ b/screendoor.v.1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>출입문게임</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
     body {
       font-family: sans-serif;
@@ -72,6 +72,7 @@
       font-size: 20px;
       margin: 10px;
       padding: 10px 20px;
+  touch-action: manipulation;
     }
     #status {
       font-size: 18px;
@@ -115,6 +116,7 @@
   padding: 0;
   display: inline-block;
   vertical-align: middle;
+  touch-action: manipulation;
 }
   </style>
 </head>
