--- a/screendoor.v.1.html
+++ b/screendoor.v.1.html
@@ -73,6 +73,9 @@
       margin: 10px;
       padding: 10px 20px;
   touch-action: manipulation;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: transparent;
     }
     #status {
       font-size: 18px;
@@ -116,7 +119,10 @@
   padding: 0;
   display: inline-block;
   vertical-align: middle;
-  touch-action: manipulation;
+   touch-action: manipulation;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
   </style>
 </head>
