--- a/screendoor.v.1.html
+++ b/screendoor.v.1.html
@@ -128,7 +128,7 @@
 </head>
 <body>
 <div id="full">
-  <div id="highscore">최고 점수: 0</div><button style="position: absolute; top: 10px; left: 120px; font-size: 16px; margin: 0px; font-weight: bold; background: rgba(255,255,255,0.8); padding: 3px 8px; border-radius: 8px;" onclick="resetHighScore()">최고 점수 초기화</button>
+  <div id="highscore">최고 점수: 0</div><button style="position: absolute; top: 50px; left: 10px; font-size: 16px; margin: 0px; font-weight: bold; background: rgba(255,255,255,0.8); padding: 3px 8px; border-radius: 8px;" onclick="resetHighScore()">최고 점수 초기화</button>
   <div id="scorebox">점수: <span id="score">0</span></div>
   <h1 style="display: inline-block; background: rgba(255,255,255,0.8); border-radius: 10px;">출입문게임</h1>
   <p style="display: inline-block; background: rgba(255,255,255,0.8); font-size: 16px; color: #333; margin: 5px 0 15px; border-radius: 5px;">
@@ -341,14 +341,15 @@ function startGame() {
   }, 3000);
     }
 
-    document.addEventListener('keydown', function(e) {
-      if (e.key === 'Enter') {
-        const startBtn = document.getElementById('startButton');
-        if (startBtn) startBtn.click();
-      }
-      if (e.key === 'ArrowLeft') choose('left');
-      else if (e.key === 'ArrowRight') choose('right');
-    });
+document.addEventListener('keyup', function(e) {
+  if (e.key === 'Enter') {
+    const startBtn = document.getElementById('startButton');
+    if (startBtn) startBtn.click();
+  }
+  if (e.key === 'ArrowLeft') choose('left');
+  else if (e.key === 'ArrowRight') choose('right');
+});
+
   function updateHints() {
   const visibleLeft = getEmojiSubset().filter(e => [1, 3, 5].includes(emojiTagMap[e]));
   const visibleRight = getEmojiSubset().filter(e => [2, 4, 6].includes(emojiTagMap[e]));
